line spacing issues on font headings on 2019/2020 bug fix

--- a/src/blocks/block-heading/styles/editor.scss
+++ b/src/blocks/block-heading/styles/editor.scss
@@ -23,6 +23,16 @@
 	margin-bottom: 0px;
 }
 
+.editor-styles-wrapper .c9-heading h1,
+.editor-styles-wrapper .c9-heading h2,
+.editor-styles-wrapper .c9-heading h3,
+.editor-styles-wrapper .c9-heading h4,
+.editor-styles-wrapper .c9-heading h5,
+.editor-styles-wrapper .c9-heading h6,
+.editor-styles-wrapper .c9-heading {
+	line-height: 1.1;
+}
+
 div[data-type="c9-blocks/heading"] small.block-editor-rich-text__editable.editor-rich-text__editable.text-muted {
 	margin-left: 0.5em;
 }
